--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "javascript-client",
   "version": "1.0.0",
   "description": "HL Javascript client",
-  "main": "index.js",
+  "main": "lib/index.js" ,
+  "files": ["lib/**/*"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
