--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "highlighter-js",
   "version": "1.0.0",
   "description": "HL Javascript client",
-  "main": "dist/index.js" ,
-  "files": ["dist/**/*"],
+  "main": "dist/index.js",
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/paho-mqtt": "^1.0.6",
-    "paho-mqtt": "^1.1.0",
-    "typescript": "^4.7.4"
+    "paho-mqtt": "^1.1.0"
+  },
+  "devDependencies": {
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   }
 }
